// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayTabs emits a number when clicking an item 1`] = `
<div>
  <ul
    class="nav nav-tabs"
    role="tablist"
  >
    <li
      class="nav-item"
    >
      <button
        aria-controls="one"
        aria-disabled="false"
        aria-selected="true"
        class="nav-link active btn btn-unstyled"
        data-testid="oneTabItem"
        role="tab"
        type="button"
      >
        One
      </button>
    </li>
    <li
      class="nav-item"
    >
      <a
        aria-controls="two"
        aria-disabled="true"
        aria-selected="false"
        class="nav-link"
        data-testid="twoTabItem"
        role="tab"
      >
        Two
      </a>
    </li>
  </ul>
  <div
    class="tab-content"
  >
    <div
      class="tab-pane active"
      role="tabpanel"
      tabkey="1"
    >
      Content One
    </div>
    <div
      class="tab-pane"
      role="tabpanel"
      tabkey="2"
    >
      Content Two
    </div>
  </div>
</div>
`;

exports[`ClayTabs renders 1`] = `
<div>
  <ul
    class="nav nav-tabs"
    role="tablist"
  />
</div>
`;

exports[`ClayTabs renders disabled nav items 1`] = `
<div>
  <ul
    class="nav nav-tabs"
    role="tablist"
  >
    <li
      class="nav-item"
    >
      <button
        aria-controls="one"
        aria-disabled="false"
        aria-selected="true"
        class="nav-link active btn btn-unstyled"
        data-testid="oneTabItem"
        role="tab"
        type="button"
      >
        One
      </button>
    </li>
    <li
      class="nav-item"
    >
      <button
        aria-controls="two"
        aria-disabled="true"
        aria-selected="false"
        class="nav-link btn btn-unstyled"
        data-testid="twoTabItem"
        role="tab"
        type="button"
      >
        Two
      </button>
    </li>
    <li
      class="nav-item"
    >
      <button
        aria-controls="three"
        aria-disabled="true"
        aria-selected="false"
        class="nav-link btn btn-unstyled disabled"
        data-testid="threeTabItem"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Three
      </button>
    </li>
  </ul>
  <div
    class="tab-content"
  >
    <div
      class="tab-pane active"
      role="tabpanel"
      tabkey="1"
    >
      Content One
    </div>
    <div
      class="tab-pane"
      role="tabpanel"
      tabkey="2"
    >
      Content Two
    </div>
    <div
      class="tab-pane"
      role="tabpanel"
      tabkey="3"
    >
      Content Three
    </div>
  </div>
</div>
`;

exports[`ClayTabs renders justifying nav items 1`] = `
<div>
  <ul
    class="nav nav-justified nav-tabs"
    role="tablist"
  />
</div>
`;

exports[`ClayTabs renders nav items as anchors 1`] = `
<div>
  <ul
    class="nav nav-tabs"
    role="tablist"
  >
    <li
      class="nav-item"
    >
      <a
        aria-controls="one"
        aria-disabled="false"
        aria-selected="true"
        class="nav-link active"
        data-testid="oneTabItem"
        role="tab"
      >
        One
      </a>
    </li>
    <li
      class="nav-item"
    >
      <a
        aria-controls="two"
        aria-disabled="true"
        aria-selected="false"
        class="nav-link"
        data-testid="twoTabItem"
        role="tab"
      >
        Two
      </a>
    </li>
  </ul>
  <div
    class="tab-content"
  >
    <div
      class="tab-pane active"
      role="tabpanel"
      tabkey="1"
    >
      Content One
    </div>
    <div
      class="tab-pane"
      role="tabpanel"
      tabkey="2"
    >
      Content Two
    </div>
  </div>
</div>
`;

exports[`ClayTabs renders with items 1`] = `
<div>
  <ul
    class="nav nav-tabs"
    role="tablist"
  >
    <li
      class="nav-item"
    >
      <button
        aria-controls="dummy1"
        aria-disabled="false"
        aria-selected="true"
        class="nav-link active btn btn-unstyled"
        data-testid="dummy1TabItem"
        role="tab"
        type="button"
      >
        Dummy1
      </button>
    </li>
    <li
      class="nav-item"
      data-testid="tabItem2"
    >
      <button
        aria-controls="dummy2"
        aria-disabled="true"
        aria-selected="false"
        class="nav-link btn btn-unstyled"
        data-testid="dummy2TabItem"
        role="tab"
        type="button"
      >
        Dummy2
      </button>
    </li>
    <li
      class="nav-item"
    >
      <button
        aria-controls="dummy3"
        aria-disabled="true"
        aria-selected="false"
        class="nav-link btn btn-unstyled"
        data-testid="dummy3TabItem"
        role="tab"
        type="button"
      >
        Dummy3
      </button>
    </li>
  </ul>
  <div
    class="tab-content"
  >
    <div
      class="tab-pane active"
      data-testid="tabPane1"
      role="tabpanel"
      tabkey="0"
    >
      Tab Content 1
    </div>
    <div
      class="tab-pane"
      data-testid="tabPane2"
      role="tabpanel"
      tabkey="1"
    >
      Tab Content 2
    </div>
    <div
      class="tab-pane"
      role="tabpanel"
      tabkey="2"
    >
      Tab Content 3
    </div>
  </div>
</div>
`;

exports[`ClayTabs renders with modern style 1`] = `
<div>
  <ul
    class="nav nav-underline"
    role="tablist"
  />
</div>
`;
